load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@npm_bazel_typescript//:index.bzl", "ts_library")
 
ts_library(
    name = "server_lib",
    srcs = glob(["*.ts"]),
    deps = ["@npm//@types"],
)

nodejs_binary(
    name = "server",
    data = [":server_lib", "@npm//request-promise-native", "@npm//semver"],
    entry_point = "__main__/server/main",
)
